--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,11 @@ li{
     background-color: #222222;
     display: inline-block;
     font-size: 12px;
-    width: 25%;
+    width: 20%;
 }/*!liのリスト要素を横並びにさせるための記述*/
 /*! 参考:https://delaymania.com/201404/web/list-inline-block/ */
 /*! inline-blockについては: http://ja.learnlayout.com/inline-block.html*/
+/*!2行4列にするにはやはりwidthが関係してたらしい*/
 
 header{
     background-color:black;
