--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,17 @@ li{
     background-color: #222222;
     display: inline-block;
     font-size: 12px;
+    text-align: center;
     width: 20%;
 }/*!liのリスト要素を横並びにさせるための記述*/
 /*! 参考:https://delaymania.com/201404/web/list-inline-block/ */
 /*! inline-blockについては: http://ja.learnlayout.com/inline-block.html*/
 /*!2行4列にするにはやはりwidthが関係してたらしい*/
+
+nav#header{
+    text-align: center;
+    margin-top: 20px;
+}
 
 header{
     background-color:black;
