--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,30 @@ ul{
     font-size: 0;
 }
 
-li{
+@media screen and (min-width:0px){
+    li{
+        background-color: #222222;
+        display: inline-block;
+        font-size: 12px;
+        text-align: center;
+        width: 10%;
+    }
+}
+
+@media screen and (min-width:300px){
+
+    li{
     background-color: #222222;
     display: inline-block;
     font-size: 12px;
     text-align: center;
-    width: 20%;
+    width: 25%;
 }/*!liのリスト要素を横並びにさせるための記述*/
 /*! 参考:https://delaymania.com/201404/web/list-inline-block/ */
 /*! inline-blockについては: http://ja.learnlayout.com/inline-block.html*/
 /*!2行4列にするにはやはりwidthが関係してたらしい*/
+/*display:flexやtable、flexboxを要調査*/
+}
 
 nav#header{
     text-align: center;
