Boxの横並びを実装(body_style.cssの変更が主)

--- a/css/body_style.css
+++ b/css/body_style.css
@@ -1,5 +1,19 @@
 .top_menu{
-    display: inline;
+    display: inline-block;
+    margin-top: 20px;
+    margin-left: 20px;
+    color: aqua;
+}
+
+.box1 {
+    padding: 0.5em 1em;
+    margin: 2em 0;
+    font-weight: bold;
+    border: solid 3px #000000;
+}
+.box1 p {
+    margin: 0; 
+    padding: 0;
 }
 
 footer{
