--- a/Reference/slide1_2.css
+++ b/Reference/slide1_2.css
@@ -1,6 +1,6 @@
-@import "compass/css3";
+/* @import "compass/css3"; */
 
-@import "compass/reset";
+/* @import "compass/reset"; */
 
 /* $maincolor: #C8A36C; */
 canvas{
@@ -31,6 +31,16 @@ nav.link-list>a{
         background-color: #fff;
         transition: background-color 0.5s ease;
     }
+    nav.link-list>img{
+        position: relative;
+            width: 12px;
+            height: 12px;
+            margin:5px;
+            display: inline-block;
+            border-radius: 50%;
+            background-color: #fff;
+            transition: background-color 0.5s ease;
+        }
 
     a.is-active{
         background-color: #C8A36C;
