--- a/css/body_style.css
+++ b/css/body_style.css
@@ -21,6 +21,32 @@ div.normal{
     padding: 0;
 }
 
+.box2 {
+    position: relative;
+    margin: 2em 0;
+    padding: 0.5em 1em;
+    border: solid 3px #95ccff;
+    border-radius: 8px;
+}
+
+.box2 .box-title {
+    position: absolute;
+    display: inline-block;
+    top: -13px;
+    left: 10px; 
+    padding: 0 9px;
+    line-height: 1;
+    font-size: 19px;
+    background: #FFF;
+    color: #95ccff;
+    font-weight: bold;
+}
+
+.box2 p {
+    margin: 0; 
+    padding: 0;
+}
+
 footer{
     text-align: center;
     margin-top: 64px;
