--- a/css/head_style.css
+++ b/css/head_style.css
@@ -33,8 +33,11 @@ nav#header{
 }
 
 header{
-    background-color:#008000
-    ;
+    width: 100%;
+    top:0px;
+    background-color:#008000;
+    position: fixed;
+    z-index: 999;
     color:white;
     padding:16px;
 }
