--- a/css/body_style.css
+++ b/css/body_style.css
@@ -77,3 +77,21 @@ footer{
     width: 960px;
     margin: 0px auto;
 }
+
+.ggmap {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px;
+    height: 0;
+    overflow: hidden;
+    }
+     
+    .ggmap iframe,
+    .ggmap object,
+    .ggmap embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    }
