メニューバーちょっと変更

--- a/css/head_style.css
+++ b/css/head_style.css
@@ -39,8 +39,9 @@ nav a{
         color: #ffffff;  
 }
 
-nav a:hover{
-    border: solid 1px #ffffff
+nav li:hover{
+    border: solid 1px #ffffff;
+    background-color: blue;
 }
 
 
