残りは初心者向けメニューのみ

--- a/css/body_style.css
+++ b/css/body_style.css
@@ -30,7 +30,7 @@ dt{
     float: left;
 }
 
-.box1 dt::after{
+.box2 dt::after{
     content: "："
 }
 
@@ -42,6 +42,14 @@ dt{
     padding: 0.5em 1em;
     border: solid 3px #008000;
     border-radius: 8px;
+}
+
+.inline_block{
+    display: inline-block;
+}
+
+.box2 .box2{
+    margin: 0.5em 0.5em;
 }
 
 .box2 .box-title {
