--- a/css/body_style.css
+++ b/css/body_style.css
@@ -39,8 +39,8 @@ dt{
     /* width: 75%; */
     position: relative;
     margin: 2em 2em;
-    padding: 0.5em 1em;
-    border: solid 3px #008000;
+    padding: 2em 4em;
+    /* border: solid 3px #008000; */
     border-radius: 8px;
 }
 
