--- a/css/body_style.css
+++ b/css/body_style.css
@@ -1,6 +1,7 @@
 
 body{
-    margin-top: 200px;
+    margin-top: 150px;
+    text-align: center;
 }
 
 div.normal{
@@ -35,13 +36,18 @@ dt{
 }
 
 
+
 .box2 {
     /* width: 75%; */
     position: relative;
     margin: 2em 2em;
-    padding: 2em 4em;
+    padding: 2em 10em;
     /* border: solid 3px #008000; */
     border-radius: 8px;
+}
+
+.std_pad{
+    padding: 30px;
 }
 
 .inline_block{
@@ -56,7 +62,7 @@ dt{
     position: absolute;
     display: inline-block;
     top: -13px;
-    left: 10px; 
+    left: 20px; 
     padding: 0 9px;
     line-height: 1;
     font-size: 19px;
