--- a/css/head_style.css
+++ b/css/head_style.css
@@ -16,13 +16,17 @@ ul{
 @media screen and (min-width:300px){
 
     li{
-    border-radius: 15px;
-    background-color: #006400;
+    border-radius: 5px;
+    background-color: #ffffff;
     display: inline-block;
     font-size: 20px;
-    margin: 3px;
+    color: #006400;
+    margin: 0px 22px;
+    padding: 10px;
     text-align: center;
-    width: 22%;
+    width: 15%;
+    height: 100%;
+    box-shadow:0px 0px 10px 0px rgba(0,0,0,0.5);
 }/*!liのリスト要素を横並びにさせるための記述*/
 /*! 参考:https://delaymania.com/201404/web/list-inline-block/ */
 /*! inline-blockについては: http://ja.learnlayout.com/inline-block.html*/
@@ -43,15 +47,17 @@ nav a{
 }
 
 nav li:hover{
-    border: solid 1px #ffffff;
-    background-color: blue;
+    color: #00a800;
+    /* border: solid 1px #ffffff; */
+    background-color: rgb(115, 255, 0);
+    box-shadow:0px 0px 20px 0px rgba(157, 255, 0, 0.5);
 }
 
 
 header{
     width: 100%;
     top:0px;
-    background-color:#008000;
+    background-color:#00a800;
     position: fixed;
     z-index: 999;
     color:white;
