--- a/css/body_style.css
+++ b/css/body_style.css
@@ -1,6 +1,6 @@
 
 body{
-    margin-top: 150px;
+    /* margin-top: 50px; */
     text-align: center;
 }
 
@@ -47,7 +47,17 @@ dt{
 }
 
 .std_pad{
-    padding: 30px;
+    padding: 50px;
+}
+
+.table_parent{
+    display: table;
+    table-layout: fixed;
+    border-spacing: 100px;
+}
+
+.table_child{
+    display: table-cell;
 }
 
 .inline_block{
