--- a/css/slide_show.css
+++ b/css/slide_show.css
@@ -1,14 +1,15 @@
 .cp_cssslider {/*スライドショーの枠の大きさ ないとサイトが横に長くなる*/
-    width: 600px;
-	height: 400px;
+    width: 450px;
+	height: 300px;
 	overflow: hidden;
+	/* 内容がボックスに収まらない場合、収まらない部分は非表示となる。内容が収まらない場合にも、スクロールバーなどは表示されない */
 	margin: 2em auto;
 	border: 10px solid #ffffff;
 	box-shadow:0px 0px 5px 0px rgba(0,0,0,0.5);
 }
 .cp_slide_item {/*表示させるコンテンツの大きさ*/
-	width: 600px;
-	height: 400px;
+	width: 450px;
+	height: 300px;
 	float: left;
 	position: relative;
 }
@@ -26,20 +27,20 @@
         transform: translateX(0);
         }
         20% {
-        -webkit-transform: translateX(-600px);
-        transform: translateX(-600px);
+        -webkit-transform: translateX(-450px);
+        transform: translateX(-450px);
         }
         40% {
-        -webkit-transform: translateX(-1200px);
-        transform: translateX(-1200px);
+        -webkit-transform: translateX(-900px);
+        transform: translateX(-900px);
         }
         60% {
-        -webkit-transform: translateX(-1800px);
-        transform: translateX(-1800px);
+        -webkit-transform: translateX(-1350px);
+        transform: translateX(-1350px);
         }
         80% {
-        -webkit-transform: translateX(-2400px);
-        transform: translateX(-2400px);
+        -webkit-transform: translateX(-1800px);
+        transform: translateX(-1800px);
         }
         100% {
         -webkit-transform: translateX(0);
@@ -53,20 +54,20 @@
 	transform: translateX(0);
 	}
 	20% {
-	-webkit-transform: translateX(-600px);
-	transform: translateX(-600px);
+	-webkit-transform: translateX(-450px);
+	transform: translateX(-450px);
 	}
 	40% {
-	-webkit-transform: translateX(-1200px);
-	transform: translateX(-1200px);
+	-webkit-transform: translateX(-900px);
+	transform: translateX(-900px);
 	}
 	60% {
-	-webkit-transform: translateX(-1800px);
-	transform: translateX(-1800px);
+	-webkit-transform: translateX(-1350px);
+	transform: translateX(-1350px);
 	}
 	80% {
-	-webkit-transform: translateX(-2400px);
-	transform: translateX(-2400px);
+	-webkit-transform: translateX(-1800px);
+	transform: translateX(-1800px);
 	}
 	100% {
 	-webkit-transform: translateX(0);
