--- a/css/body_style.css
+++ b/css/body_style.css
@@ -1,7 +1,8 @@
 
 body{
-    /* margin-top: 50px; */
+    margin-top: 150px;
     text-align: center;
+    background-color: #3cff0050
 }
 
 div.normal{
@@ -47,13 +48,13 @@ dt{
 }
 
 .std_pad{
-    padding: 50px;
+    padding: 25px;
 }
 
 .table_parent{
     display: table;
-    table-layout: fixed;
-    border-spacing: 100px;
+    /* table-layout: fixed; */
+    border-spacing: 5px;
 }
 
 .table_child{
@@ -62,6 +63,40 @@ dt{
 
 .inline_block{
     display: inline-block;
+}
+
+.overray{
+    width: 280px;
+	height: 188px;
+	overflow: hidden;
+	margin: 10px 8px 10px 16px;
+	position: relative;
+}
+
+.overray .caption{
+    /* text-align: center; */
+    font-size: 130%;
+	color: #fff;
+	/* padding-top: 80px; */
+	padding: 100px;
+}
+
+.overray .mask{
+    width: 100%;
+	height:	100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	background-color:rgba(0,0,0,0.4);
+	-webkit-transition:	all 0.4s ease;
+	transition: all 0.4s ease;
+	-webkit-transform: scale(0);	/* 大きさを０にして表示しない */
+	transform: scale(0);
+}
+
+.overray:hover .mask{
+    -webkit-transform: scale(1);	/* 大きさを１にして表示する */
+	transform: scale(1);
 }
 
 .box2 .box2{
