--- a/css/head_style.css
+++ b/css/head_style.css
@@ -34,7 +34,13 @@ ul{
 /*display:flexやtable、flexboxを要調査*/
 }
 
+.title{
+    box-shadow:0px 0px 20px 0px rgba(0,0,0,0.5);
+}
 
+.title:hover{
+    box-shadow:0px 0px 0px 0px rgba(0,0,0,0.5);
+}
 
 nav#header{
     text-align: center;
@@ -62,6 +68,17 @@ header{
     z-index: 999;
     color:white;
     padding:16px;
+    box-shadow:0px 0px 20px 0px rgba(0,0,0,0.5);
+}
+
+.now_page{
+    padding: 5px;
+    text-align: center;
+    border-radius: 5px;
+    background-color: #ffffff;
+    color: #00a800;
+    font-size: 20px;
+    margin: 0px 10px
 }
 
 .profile{
