--- a/css/body_style.css
+++ b/css/body_style.css
@@ -2,7 +2,7 @@
 body{
     margin-top: 150px;
     text-align: center;
-    background-color: #3cff0050
+    background-color: #adadad50
 }
 
 div.normal{
@@ -53,7 +53,7 @@ dt{
 
 .table_parent{
     display: table;
-    /* table-layout: fixed; */
+    table-layout: fixed;
     border-spacing: 5px;
 }
 
@@ -76,7 +76,7 @@ dt{
 .overray .caption{
     /* text-align: center; */
     font-size: 130%;
-	color: #fff;
+	color: rgb(0, 253, 63);
 	/* padding-top: 80px; */
 	padding: 100px;
 }
@@ -87,7 +87,7 @@ dt{
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color:rgba(0,0,0,0.4);
+	background-color: rgba(255, 166, 0, 0.4);
 	-webkit-transition:	all 0.4s ease;
 	transition: all 0.4s ease;
 	-webkit-transform: scale(0);	/* 大きさを０にして表示しない */
@@ -111,7 +111,7 @@ dt{
     padding: 0 9px;
     line-height: 1;
     font-size: 19px;
-    background: #FFF;
+    /* background: #FFF; */
     color: #008000;
     font-weight: bold;
 }
@@ -153,4 +153,14 @@ footer{
     left: 0;
     width: 100%;
     height: 100%;
+    }
+
+    .course_frame{/*スライドショーの枠の大きさ ないとサイトが横に長くなる*/
+        border-radius: 7px;
+        width: 75%;
+        height: auto;
+        overflow: hidden;
+        margin: 2em auto;
+        border: 8px solid #ffffff;
+        box-shadow:0px 0px 5px 0px rgba(0,0,0,0.5);
     }
